--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -49,7 +49,7 @@
             </div>
             <div class="suggestions">
               <div class="suggestion">
-                <span class="value">21</span>
+                <span class="value">{% document_suggestions invite.group.document 'private' request.user %}</span>
                 <span>Sugestões</span>
               </div>
             </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="suggestions">
               <div class="suggestion">
-                <span class="value">21</span>
+                <span class="value">{% document_suggestions private_document 'private' request.user %}</span>
                 <span>Sugestões</span>
               </div>
             </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="suggestions">
               <div class="suggestion">
-                <span class="value">21</span>
+                <span class="value">{% document_suggestions document %}</span>
                 <span>Sugestões</span>
               </div>
             </div>
