Create animation icon

--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -9,6 +9,10 @@ body.-open-menu .nav-bar {
   }
 }
 
+body.-white .nav-bar {
+  background-color: #FFF;
+}
+
 .nav-bar {
   position: fixed;
   z-index: 2;
