--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -4,12 +4,18 @@
   top: 0;
   left: 0;
 
+  display: none;
+
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   padding: 1.6rem;
 
   background-color: $color-whitesmoke;
+
+  &.-show {
+    display: block;
+  }
 
   & > .header {
     display: flex;
@@ -42,9 +48,10 @@
     text-align: center;
   }
 
-  & > .content > .image {
-    display: flex;
-    justify-content: center;
+  & > .content > img,
+  & > .content > svg {
+    width: 14rem;
+    margin: 0 auto;
   }
 
   & > .solid-button {
@@ -56,11 +63,7 @@
   }
 
   & > .simple-link {
-    display: flex;
-    justify-content: center;
-
+    margin: 0 auto;
     margin-top: 1rem;
-
-    text-align: center;
   }
 }
