--- a/src/templates/components/generic-modal.html
+++ b/src/templates/components/generic-modal.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<!-- <div class="generic-modal">
+<div class="generic-modal">
   <div class="header">
     <h2>Modal</h2>
     <div class="close"><img class="icon" src="{% static 'img/close.svg' %}"></div>
@@ -12,5 +12,4 @@
   </div>
   <a href="#" class="solid-button -green">Próximo</a>
   <a href="#" class="simple-link">Pular tutorial</a>
-
-</div> -->
+</div>
