Add highlight templatetag
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/document-excerpt.html
+++ b/src/templates/components/document-excerpt.html
@@ -1,3 +1,2 @@
-<div class="document-excerpt js-documentExcerpt" data-id="{{excerpt.id}}">
-  {{excerpt.content}}
-</div>
+{% load participations_tags %}
+<span class="document-excerpt js-documentExcerpt" data-id="{{excerpt.id}}">{% highlight_suggestions excerpt %}</span>
