--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -21,27 +21,27 @@
     <hr>
   </div>
 
-  <p><b>Art. 1º - </b><span class="document-excerpt js-documentExcerpt" data-id="1">As campanhas publicitárias <span class="text-highlight">destinadas à venda de produtos de consumo ficam proibidas de exibir, em qualquer veículo de comunicação ou propaganda, imagens ou cenas que façam,</span> direta ou indiretamente, apelo erótico ou alusão à sexualidade e à sensualidade feminina.</span></p>
+  <p><b>Art. 1º - </b><span class="document-excerpt js-documentExcerpt" data-id="14">As campanhas publicitárias <span class="text-highlight">destinadas à venda de produtos de consumo ficam proibidas de exibir, em qualquer veículo de comunicação ou propaganda, imagens ou cenas que façam,</span> direta ou indiretamente, apelo erótico ou alusão à sexualidade e à sensualidade feminina.</span></p>
 
-  <p><b>Art. 2º - </b><span class="document-excerpt js-documentExcerpt" data-id="2">As peças publicitárias ficam proibidas de apresentar, de forma evidente ou subliminar, linguagem verbal de conotação erótica ou sexual, ou expressões que evidenciem a exploração, a violência ou a discriminação contra a mulher.</span></p>
+  <p><b>Art. 2º - </b><span class="document-excerpt js-documentExcerpt" data-id="15">As peças publicitárias ficam proibidas de apresentar, de forma evidente ou subliminar, linguagem verbal de conotação erótica ou sexual, ou expressões que evidenciem a exploração, a violência ou a discriminação contra a mulher.</span></p>
 
-  <p><b>Art. 3º - </b><span class="document-excerpt js-documentExcerpt" data-id="3">Aplicam-se ao infrator desta lei, sem prejuízo de outras sanções penais cabíveis na legislação vigente, as seguintes penalidades:</span></p>
+  <p><b>Art. 3º - </b><span class="document-excerpt js-documentExcerpt" data-id="16">Aplicam-se ao infrator desta lei, sem prejuízo de outras sanções penais cabíveis na legislação vigente, as seguintes penalidades:</span></p>
 
-  <p><b>I - </b><span class="document-excerpt js-documentExcerpt" data-id="4">advertência; </span></p>
+  <p><b>I - </b><span class="document-excerpt js-documentExcerpt" data-id="17">advertência; </span></p>
 
-  <p><b>II - </b><span class="document-excerpt js-documentExcerpt" data-id="5">suspensão, no veículo de divulgação da publicidade, de qualquer outra propaganda do produto, por prazo de até trinta dias;</span></p>
+  <p><b>II - </b><span class="document-excerpt js-documentExcerpt" data-id="18">suspensão, no veículo de divulgação da publicidade, de qualquer outra propaganda do produto, por prazo de até trinta dias;</span></p>
 
-  <p><b>III - </b><span class="document-excerpt js-documentExcerpt" data-id="6">obrigatoriedade de veiculação de retificação ou esclarecimento para compensar propaganda distorcida ou de má-fé;</span></p>
+  <p><b>III - </b><span class="document-excerpt js-documentExcerpt" data-id="19">obrigatoriedade de veiculação de retificação ou esclarecimento para compensar propaganda distorcida ou de má-fé;</span></p>
 
-  <p><b>IV - </b><span class="document-excerpt js-documentExcerpt" data-id="7">apreensão do produto;</span></p>
+  <p><b>IV - </b><span class="document-excerpt js-documentExcerpt" data-id="20">apreensão do produto;</span></p>
 
-  <p><b>V - </b><span class="document-excerpt js-documentExcerpt" data-id="8">multa, de R$ 20.000,00 (vinte mil reais) a R$ 200.000,00 (duzentos mil reais), aplicada conforme a capacidade econômica do infrator;</span></p>
+  <p><b>V - </b><span class="document-excerpt js-documentExcerpt" data-id="21">multa, de R$ 20.000,00 (vinte mil reais) a R$ 200.000,00 (duzentos mil reais), aplicada conforme a capacidade econômica do infrator;</span></p>
 
-  <p><b>VI - </b><span class="document-excerpt js-documentExcerpt" data-id="9">suspensão da programação da emissora de rádio e televisão, pelo tempo de dez minutos, por cada minuto ou fração de duração da propaganda transmitida em desacordo com esta Lei, observando-se o mesmo horário.</span></p>
+  <p><b>VI - </b><span class="document-excerpt js-documentExcerpt" data-id="22">suspensão da programação da emissora de rádio e televisão, pelo tempo de dez minutos, por cada minuto ou fração de duração da propaganda transmitida em desacordo com esta Lei, observando-se o mesmo horário.</span></p>
 
-  <p><b>Parágrafo único - </b><span class="document-excerpt js-documentExcerpt" data-id="10">As sanções previstas neste artigo serão aplicadas pela autoridade competente, no âmbito de sua atribuição, podendo ser cumulativas.</span></p>
+  <p><b>Parágrafo único - </b><span class="document-excerpt js-documentExcerpt" data-id="23">As sanções previstas neste artigo serão aplicadas pela autoridade competente, no âmbito de sua atribuição, podendo ser cumulativas.</span></p>
 
-  <p><b>Art. 4º - </b><span class="document-excerpt js-documentExcerpt" data-id="10">Esta Lei entra em vigor na data de sua publicação</span></p>
+  <p><b>Art. 4º - </b><span class="document-excerpt js-documentExcerpt" data-id="24">Esta Lei entra em vigor na data de sua publicação</span></p>
 
 
 </main>
@@ -59,8 +59,8 @@
   </span>
   <div class="input">
     <input class="js-input" type="text" name="">
-    <div class="send js-send">
-      <img class="icon" src="{% static 'img/send.svg' %}">
+    <div class="send">
+      <img class="icon js-send" src="{% static 'img/send.svg' %}">
     </div>
   </div>
   <span class="error js-inputError"></span>
@@ -71,9 +71,11 @@
   <script src="{% static 'js/components/documentExcerpt/view.js' %}"></script>
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
   <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
+  <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
+  <script src="{% static 'js/components/suggestionInput/controller.js' %}"></script>
   <script src="{% static 'js/components/navBurger/view.js' %}"></script>
   <script src="{% static 'js/components/navBar/view.js' %}"></script>
   <script src="{% static 'js/components/searchInput/view.js' %}"></script>
   <script src="{% static 'js/components/body/view.js' %}"></script>
-  <script src="{% static 'js/pages/home.js' %}"></script>
+  <script src="{% static 'js/pages/document.js' %}"></script>
 {% endblock page_js %}
