--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -29,6 +29,9 @@
   <p><b>{% excerpt_numbering excerpt %}</b>{% include "components/document-excerpt.html" with excerpt=excerpt %}</p>
   {% endfor %}
 
+  <h3>Título I</h3>
+  <h4>Das disposições gerais</h4>
+
 </main>
 
 <div class="suggestion-input js-suggestionInput">
