--- a/src/static/scss/base/_typography.scss
+++ b/src/static/scss/base/_typography.scss
@@ -23,6 +23,10 @@ h3 {
   font-weight: 700;
 }
 
+h4 {
+  font-weight: 500;
+}
+
 h1 {
   font-size: $font-size-deca;
   line-height: $line-height-base;
@@ -49,6 +53,16 @@ h3 {
 
   @include bp-mediumup {
     font-size: $font-size-deca;
+    line-height: $line-height-base;
+  }
+}
+
+h4 {
+  font-size: $font-size-centi;
+  line-height: $line-height-mili;
+
+  @include bp-mediumup {
+    font-size: $font-size-centi;
     line-height: $line-height-base;
   }
 }
