rebase from dev

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="nav-bar">
   <div class="nav-burger"></div>
-  <a href="/" class="brand">Wikilegis</a>
+  <a href="{% url 'home' %}" class="brand">Wikilegis</a>
 </div>
 
 <div class="nav-menu">
