--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -26,11 +26,13 @@
   </div>
 
   {% for excerpt in object.excerpts.all %}
-  <p><b>{% excerpt_numbering excerpt %}</b>{% include "components/document-excerpt.html" with excerpt=excerpt %}</p>
+    {% if excerpt.excerpt_type.align_center %}
+    <h3>{% excerpt_numbering excerpt %}</h3>
+    <h4>{{ excerpt.content|safe }}</h4>
+    {% else %}  
+    <p><b>{% excerpt_numbering excerpt %}</b>{% include "components/document-excerpt.html" with excerpt=excerpt %}</p>
+    {% endif %}
   {% endfor %}
-
-  <h3>Título I</h3>
-  <h4>Das disposições gerais</h4>
 
 </main>
 
